PV-ISVAOP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isvaop
  labels:
    app: isvaop
  annotations:
    version: "2.0"
spec:
  selector:
    matchLabels:
      app: isvaop
  replicas: 2
  template: 
    metadata:
      labels:
        app: isvaop
    spec:
      volumes:
        - name: isvaconfig-aac
          configMap:
            name: isvaop-config
      containers:
        - name: isvaop
          # The fully qualified name of the ISVAOP image.
          image: icr.io/isva/verify-access-oidc-provider:24.06
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "2"
              memory: "3814Mi"
            limits:
              cpu: "2"
              memory: "3814Mi"
          # Mount our volumes to the expected configuration directory
          volumeMounts:
            - mountPath: /var/shared
              name: isvaconfig-aac
          readinessProbe:
            httpGet:
              path: /healthcheck/ready
              port: 8436
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthcheck/alive
              port: 8436
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: isvaop
  labels:
    app: isvaop
spec:
  ports:
    - port: 8436
      name: isvaop
      nodePort: 30446 
  selector:
    app: isvaop
  type: NodePort
