full-webadmin.yaml
#
# The deployment description of the Verify Directory webadmin container.
#

apiVersion: apps/v1
kind: Deployment

metadata:
  name: isvd-webadmin
  labels:
    app: isvd-webadmin

spec:
  selector:
    matchLabels:
      app: isvd-webadmin

  template:
    metadata:
      labels:
        app: isvd-webadmin

    spec:
      # The name of the service account which has the required
      # capabilities enabled for the isvd container.
      serviceAccountName: isvd

      # We use a volume to store the configuration for the
      # environment.
      volumes:
      - name: config-volume
        configMap:
          name: webadmin-config

      containers:
      - name: isvd-webadmin

        # The fully qualified name of the image.
        image: icr.io/isvd/verify-directory-webadmin:latest

        # The port on which the container will be listening.
        ports:
        - containerPort: 9443

        # Environment definition.
        volumeMounts:
        - name: config-volume
          mountPath: /var/isvd/config

        # The liveness, readiness and startup probes are used by
        # Kubernetes to monitor the health of the container.  Our
        # health is governed by the health_check.sh script which is
        # provided by the container.
        livenessProbe:
          exec:
            command:
            - /sbin/health_check.sh
            - livenessProbe
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          exec:
            command:
            - /sbin/health_check.sh
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          exec:
            command:
            - /sbin/health_check.sh
            - startupProbe
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service

metadata:
  name: isvd-webadmin

spec:
  ports:
  - port: 9443
    name: isvd-webadmin
    protocol: TCP
    nodePort: 30443

  selector:
    app: isvd-webadmin

  type: NodePort
